syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "HelloServiceProto";
option objc_class_prefix = "RTG";

package dhtproto;

// Interface exported by the server.
service DhtProtoService {

  rpc SayHello(StringMessage) returns (StringMessage) {}

  rpc GetValue(KeyMessage) returns (KeyValueMessage) {}
 
  rpc StoreValue(KeyValueMessage) returns (KeyValueMessage) {}
}

message StringMessage {
  string message = 1;
}

message KeyMessage {
  string key = 1;
}

message KeyValueMessage {
  string key = 1;
  string value = 2;
}